同步监视器/Lock/通信

--- a/exception-common/src/test/java/multi_thread/生命周期.md
+++ b/exception-common/src/test/java/multi_thread/生命周期.md
@@ -1,7 +1,7 @@
 Thread.state 定义
 
  - 新建 NEW
- - 就绪 star()
+ - 就绪 start()
  - 运行 run() RUNNABLE
- - 阻塞 BLOCK WAITING TIMED_WAITTING
- - 死亡 TERMINATE    
+ - 阻塞 join() sleep() wait() suspend() BLOCK WAITING TIMED_WAITTING
+ - 死亡 执行完毕 stop() TERMINATE    
